syntax = "proto3";

package node_proto;
option go_package = "github.com/rhosus/rhosus/pb/node_pb";


service NodeService {
  rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {}

message PingResponse {}


// Information about node
message NodeInfo {
  string id = 1;
  uint64 capacity = 2;
  uint64 remaining = 3;
  uint64 lastUpdate = 4;
  string location = 5;
  enum State {
    NORMAL = 0;
    DECOMMISSION_IN_PROGRESS = 1;
    DECOMMISSIONED = 2;
  }
  State state = 6;
  uint64 cacheCapacity = 7;
  uint64 cacheUsed = 8;
}

message FileStatus {
  enum FileType {
    DIR = 0;
    FILE = 1;
    SYMLINK = 3;
  }
  FileType type = 1;
  bytes path = 2;
  uint64 length = 3;
  message FsPermission {
    uint32 perm = 1;
  }
  FsPermission permission = 4;
  string owner = 5;
  string group = 6;

  bytes symlink = 7; // Optional. Used only for symlinks
}

message DirectoryListing {
  repeated FileStatus listing = 1;
  uint32 remainingPackages = 2;
}

enum ChecksumType {
  CHECKSUM_NULL = 0;
  CHECKSUM_CRC32 = 1;
  CHECKSUM_CRC32C = 2;
}

